data/repos_history/junson-weinet/gcp_ed_config/2022-05-25T07:55:34Z/swj/webapi/sg-swj-cm000183.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sg-swj-ui
  namespace: api-swj
  labels:
    app.kubernetes.io/name: sg-swj-ui
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0     #更新时候最大无效pod数量
      maxSurge: 1           #更新时候每次最多增加pod数量
  selector:
    matchLabels:
      app.kubernetes.io/name: sg-swj-ui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sg-swj-ui
    spec:
      volumes:
      - name: config-volume
        secret:
          secretName: sg-app-bucket-secret
          items:
          - key: config_json
            path: sa_credentials.json
      containers:
        - name: gcs-k8s-nginx
          resources:          ##CPU内存限制
            limits:
              cpu: 500m
            requests:
              cpu: 250m
          image: gcr.io/rd-test-64435/sg_nginx:v22.2.24.1
          imagePullPolicy: Always
          volumeMounts:
          - name: config-volume
            mountPath: /etc/gcp
            readOnly: true
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          securityContext:
            privileged: true
            capabilities:
              add:
                - SYS_ADMIN
          lifecycle:
            postStart:
              exec:
                command: ["sh", "-c", "gcsfuse -o allow_other --implicit-dirs sg-app-swj /etc/nginx/conf.d & ln -s /etc/nginx/conf.d/ui /usr/share/nginx/ui"]
            preStop:
              exec:
                command: ["sh", "-c", "fusermount -u /etc/nginx/conf.d"]
---

apiVersion: v1
kind: Service
metadata:
  name: sg-swj-svc
  namespace: api-swj
  labels:
    app.kubernetes.io/name: sg-swj-ui
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: sg-swj-ui
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sg-swj-ingress
  namespace: api-swj
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - secretName: sg-swj-app-tls
  rules:
  - host: swj-app.gttest13.com
    http:
      paths:
      - path: /user/([a-z]{2}-[a-z]{2}/|swagger/?)
        pathType: Prefix
        backend:
          service:
            name: user-svc
            port:
              number: 10001
      - path: /message/([a-z]{2}-[a-z]{2}/|swagger/?)
        pathType: Prefix
        backend:
          service:
            name: msg-svc
            port:
              number: 10001
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sg-swj-svc
            port:
              number: 8080
  - host: swj.gttest13.com
    http:
      paths:
      - path: /user/([a-z]{2}-[a-z]{2}/|swagger/?)
        pathType: Prefix
        backend:
          service:
            name: user-svc
            port:
              number: 10001
      - path: /message/([a-z]{2}-[a-z]{2}/|swagger/?)
        pathType: Prefix
        backend:
          service:
            name: msg-svc
            port:
              number: 10001
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sg-swj-svc
            port:
              number: 8080
